# nf-fuzzball

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  build.gradle  nextflow.config  settings.gradle
.github/actions/setup-fuzzball-schema/: action.yml
.github/workflows/: build.yml
code-generation/: generate  generate_config.yaml
code-generation/groovy-okhttp-sync/: ApiConfig.mustache  ApiUtils.mustache  README.mustache  api.mustache  build.gradle.mustache  model.mustache  modelClass.mustache  modelEnum.mustache
code-generation/schemas/: fuzzball-v2.1-openapi.json  fuzzball-v2.2-openapi.json  fuzzball-v3.0-openapi.json  fuzzball-v3.1-openapi.json  fuzzball-v3.2-openapi.json  fuzzball-v3.3-openapi.json
nf-fuzzball-submit/: README.md  pyproject.toml
nf-fuzzball-submit/src/nf_fuzzball_submit/: __init__.py  __main__.py  auth.py  cli.py  client.py  models.py  utils.py
nf-fuzzball-submit/src/nf_fuzzball_submit/templates/: egress.j2  nextflow.sh.j2  setup.sh.j2
nf-fuzzball-submit/tests/: conftest.py  test_auth.py  test_cli.py  test_client_integration.py  test_models.py  test_templates.py  test_utils.py
plugins/nf-fuzzball/: build.gradle
plugins/nf-fuzzball/src/main/com/ciq/fuzzball/: FuzzballPlugin.groovy  FuzzballTaskHandler.groovy  FuzzballTraceObserver.groovy  FuzzballTraceObserverFactory.groovy
src/main/groovy/: FuzzballYamlDumper.groovy
src/main/groovy/com/ciq/fuzzball/: FuzzballConfig.groovy  FuzzballExecutor.groovy  FuzzballPlugin.groovy  FuzzballPluginConfig.groovy  FuzzballTaskHandler.groovy  FuzzballTokenRefresher.groovy  FuzzballTraceObserver.groovy  FuzzballWorkflowDefinitionJobFactory.groovy  FuzzballYaml.groovy  FuzzballYamlDumper.groovy
src/test/groovy/com/ciq/fuzzball/: FuzzballTaskHandlerSpec.groovy
submit/: README.md  Readme.md  submit_nextflow.py
